<resources>
    <string name="app_name">Sophia Cafe</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_numbers">1</string>
    <string name="order_btn_string">ORDER</string>
    <string name="order_summary_string">ORDER SUMMARY</string>
    <string name="btn_increment">+</string>
    <string name="btn_decrement">-</string>
    <string name="price_of_coffees">\u20B9 5</string>
    <string name="espresso_string">Espresso</string>
    <string name="doppio_string">Caffé doppio</string>
    <string name="decaffeinato_string">Decaffeinato</string>
    <string name="ristretto_string">Caffè ristretto</string>
    <string name="caffellatte_string">Caffellatte</string>
    <string name="latte_macchiato_string">Latte macchiato</string>
    <string name="ginseng_string">Caffè al ginseng</string>
    <string name="mocaccino_string">Mocaccino</string>
    <string name="cappuccino_string">Cappuccino</string>
    <string name="caffé_shakerato_string">Caffé shakerato</string>
    <string name="cappuccino_wiki_string">Cappuccino is a slightly long espresso with the addition of about 100 ml of frothed milk, served in a large cup, sometimes with a sprinkle of cocoa.</string>
    <string name="milk_string">Milk</string>
    <string name="syrup_string">Syrup</string>
    <string name="size_string">Size</string>
    <string name="small_string">Small</string>
    <string name="medium_string">Medium</string>
    <string name="large_string">Large</string>
    <string name="full_cream_milk_string">Full\nCream\nMilk</string>
    <string name="semi_skimmed_milk_string">Semi\nSkimmed\nMilk</string>
    <string name="soy_nmilk_string">Soy \nMilk</string>
    <string name="no_syrup_string">No Syrup</string>
    <string name="vanilla_string">Vanilla</string>
    <string name="chocolate_string">Chocolate</string>
    <string name="add_string">Add</string>
    <string name="price_small_string">₹ 5</string>
    <string name="price_medium_string">₹ 10</string>
    <string name="price_large_string">₹ 15</string>
    <string name="esspresso_wiki">Caffè If you ask for “un caffé” at the bar, you get what for us Italians is “the” coffee, i.e. a creamy and tasty quite strong espresso.</string>
    <string name="caffa_doppia_wiki">Caffé doppio [kahf-FEH DOHP-pyoh] is simply a double dose of espresso.</string>
    <string name="decaffeinato_wiki">Caffè decaffeinato is a coffee deprived of caffeine. People normally drink it in the evening and after dinner to avoid the risk of staying awake during the night. When you order it, you can simply ask “un decaffeinato”</string>
    <string name="caffe_ristretto_wiki">Caffè ristretto [ree-STREHT-toh] is a very concentrated espresso, therefore it is small. It tastes very strong but its caffeine content is actually very low.</string>
    <string name="latte_maccjiato_wiki">Caffellatte is an espresso mixed with about 200 ml of warm milk. Usually people drink it at home dipping biscuits in it during breakfast. It is similar to American latte.</string>
    <string name="latte_macchiato_wiki">Latte macchiato is warm milk served in a tall glass with the addition of an espresso poured on top.</string>
    <string name="caffe_al_ginseng_wiki">Caffè al ginseng prepared with coffee, milk cream and ginseng extract. This is a coffee that I love very much. It gives me energy and it’s more digestible.</string>
    <string name="macaccino_wiki">Mocaccino [mok-kah-CHEE-noh] is a cappuccino with the addition of a little hot chocolate and cream, served in a transparent cup.</string>
    <string name="cappuccino_wiki">Cappuccino [kahp-pooh-CHEE-noh] is a slightly long espresso with the addition of about 100 ml of frothed milk, served in a large cup, sometimes with a sprinkle of cocoa.</string>
    <string name="caffe_shakerato_wiki">Caffé shakerato [sheh-keh-RAH-toh] or caffè freddo [kahf-FEH FREHD-doh] is an espresso. The barman shake it with ice, therefore it is perfect for hot summer days.</string>
    <string name="order_string">Order</string>
    <string name="splash_screen_content_desc">splash screen</string>
    <string name="main_screen_coffee_string">Coffee</string>
    <string name="main_screen_cold_coffee_string">Cold Coffee</string>
    <string name="main_screen_shake_string">Shake</string>
    <string name="main_screen_latte_string">Latte</string>
    <string name="bundle_string_name">Name</string>
    <string name="bundle_string_icon">Icon</string>
    <string name="bundle_string_wiki">Wiki</string>
    <string name="bundle_putstring_name">Name</string>
    <string name="bundle_order_summary">Summary</string>
    <string name="bundle_string_total">Total</string>
    <string name="bundle_string_data">data</string>
    <string name="order_button">Order</string>
    <string name="timeline_date_one">20 min ago</string>
    <string name="timeline_date_two">18 min ago</string>
    <string name="timeline_date_three">2 min ago</string>
    <string name="timeline_date_four">20 sec ago</string>
    <string name="timeline_status_one">Order Placed</string>
    <string name="timeline_status_two">Order is preparing</string>
    <string name="timeline_status_three">Order is ready to pickup</string>
    <string name="timeline_status_four">Please collect your order from  pickup window no: 9</string>
    <string name="u20b9_5">₹ 5</string>
    <string name="product_image">product image</string>
</resources>
